*暂存更改：部分角色管理功能

--- a/src/global.less
+++ b/src/global.less
@@ -2,6 +2,11 @@
   font-family: hmy;
   src: url(/HarmonyOS_Sans_SC_Regular.ttf);
 }
+* {
+  font-family: hmy, 'PingFang SC', 'Helvetica Neue', 'Helvetica', 'Arial', 'Hiragino Sans GB',
+    'Microsoft YaHei', '微软雅黑', 'WenQuanYi Micro Hei', '文泉驿微米黑', 'Heiti SC', '黑体',
+    'Tahoma', 'Geneva', 'Arial', sans-serif !important;
+}
 html,
 body,
 #root {
